[package]
name = "regex_router"
version = "1.0.0"
edition = "2021"
authors = ["Harry [hello@majored.pw]"]
repository = "https://github.com/Majored/rs-regex-router"
description = "An implementation of request routing via a singular grouped regex (with support for path parameter extraction)."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/regex_router/"
homepage = "https://github.com/Majored/rs-regex-router"
keywords = ["web", "regex", "router"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["full"] }
hyper = { version = "0.14.5", features = ["full"] }

[lib]
doctest = false